css/reynolds_sbit_cat_welding.css
/* ... */
.section-video {
    display: block;
    position: relative;
    width: 100%;
    padding: 0px 0px 0px 0px;
    margin: 30px 0px 30px 0px;
}
.purpose-and-other {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 28px;
    padding: 0px var(--set-02) 0px var(--set-02);
}
#main_head_image_01 {
    display: block;
    position: relative;
    max-width: 1200px;
    height: 170px;
    background-image: url("../images/benjamin-wedemeyer-bzzSg8hTKKY-unsplash.jpg");
    background-size: cover;
    background-position: 50% 60%;
    margin: 0px auto 0px auto;
}
.story-image {
    margin: 30px 0px 30px 0px;
}
.ending-content {
    display: block;
    position: relative;
    padding: 35px var(--set-01) 35px var(--set-01);
}
.view-roadmap {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 16px;
    text-decoration: underline;
    margin: 20px 0px 40px 0px;
}
.back-to-programs {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 16px;
    font-weight: 700;
    font-size: 16px;
}
.back-to-programs a {
    color: #000000;
    text-decoration: none;
}
.back-to-programs a:hover {
    text-decoration: underline;
}
.majors-heading {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 24px;
    font-weight: 700;
    line-height: 25px;
    color:#000000;
    background-color:white;
    padding: 50px var(--set-01) 5px var(--set-01);
}


/* —————— BOOTSTRAP ACCORDION —————— */
.accordion {
    display: block;
    position: relative;
    max-width: 1200px;
    padding: 0px var(--set-01) 0px var(--set-01);
    margin: 0px auto 0px auto;
}
.accordion-header {
    color: red;
    background-color:rgb(255, 242, 0);
    border-radius: 0px 0px 0px 0px;
    border: none;
}
.accordion-button, .accordion-button:not(.collapsed) {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 20px;
    font-weight: 700;
    line-height: 25px;
    color:#000000;
    background-color:rgba(242, 242, 242, 1);
    padding: 15px var(--set-02) 20px var(--set-02);
    border-radius: 0px 0px 0px 0px;
    height: 55px;
    z-index: 1;
}
.accordion-button:not(.collapsed)::after {
    filter: brightness(0%);
}
.accordion-button:focus {
    box-shadow: inherit;
}
.accordion-item {
    border: none;
}
.accordion-body {
    padding: 20px 0px 20px 0px;
    border: none;
}

/* —————— CUSTOM ACCORDION —————— */

.course-number {
    display: block;
    position: relative;
    font-weight: 700;
    margin: 0px 0px 0px 0px;
}
.course-name {
    display: block;
    position: relative;
    font-weight: 400;
    margin: 0px 0px 0px 0px;
}
.course-credits {
    display: block;
    position: relative;
    font-weight: 400;
    margin: 0px 0px 0px 0px;
}
.accordion__button {
    display: block;
    width: 100%;
    padding: 15px var(--set-02) 15px var(--set-02);
    border: none;
    cursor: pointer;
    background: #ffffff;
    color: #000000;
    text-align: left;
    transition: background 0.2s;
}
.accordion__button:hover { 
    background: rgb(245, 245, 245);
}
.accordion__button::after {
    content: '\25be';
    color: rgb(220, 220, 220);
    float: right;
    transform: scale(1.5);
    margin: -50px 0px 0px 0px;
}
.accordion__button--active + .accordion__content {
    display: block;
}
.accordion__button--active {
    background: rgb(235, 235, 235);
    /* margin: 50px 0px 0px 0px; */
    /* border-top: 1px solid rgb(200, 200, 200);
    border-bottom: 1px solid rgb(200, 200, 200); */
}
.accordion__button--active .course-name {
    font-weight: 700;
    background: rgb(235, 235, 235);
}
.accordion__button--active:hover {
    background: rgb(235, 235, 235);
}
.accordion__button--active::after {
    content: '\25b4';
    color: rgb(0, 0, 0);
}
.accordion__content {
    font-size: 16px;
    /* overflow: hidden;
    max-height: 0px;
    transition: max-height 0.2s; */

    padding: 10px var(--set-02) 10px var(--set-02);
    /* margin: 0px 0px 50px 0px; */
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    background: rgb(245, 245, 245);
    /* For accordion without transition */
    display: none;
    overflow: auto;
}
.total-credit-hours {
    font-weight: 700;
    padding: 20px var(--set-02) 20px var(--set-02);
}
.total-credit-hours-last {
    font-weight: 700;
    padding: 20px var(--set-02) 0px var(--set-02);
    margin: 0px 0px -37px 0px;
}
.kerning-01 {
    letter-spacing: -.03em;
}
.accordion-body h3 {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 20px;
    font-weight: 700;
    line-height: 25px;
    color:#000000;
    padding: 20px 0px 0px 0px;
    margin-top: 22px;
    border-radius: 0px 0px 0px 0px;
}
.course-order {
    margin-bottom: 15px;
}

/* —————— FOOTER —————— */
#footer-address-bar {
    display: block;
    position: relative;
    height: 100%;
    background-color:rgb(164, 32, 54);
    padding: 0px var(--set-01) 0px var(--set-01);
}
#footer-copyright-bar {
    display: block;
    position: relative;
    height: 100%;
    background-color:#353535;
    padding: 0px var(--set-01) 1px var(--set-01);
}
#footer-reynolds-logo {
    display: block;
    position: relative;
    max-width: 1200px;
    padding: 50px 0px 25px 0px;
    margin: 0px auto 0px auto;
}
#footer-reynolds-logo img {
    display: block;
    position: relative;
    width: 234px;
    left: -30px;
}
.footer-locations {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px 0px 0px 0px;
}
.footer-address {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 20px;
    font-weight: 400;
    line-height: 25px;
    color: rgb(255, 255, 255);
    width: fit-content;
}
.address-head {
    font-weight: 900;
    margin: 0px 0px 0px 0px;
}
/* ... */

